# future_agi_demo

./: .env.example  FUTUREAGI_SETUP.md  README.md  SETUP_COMPLETE.md  add_sample_docs.py  config.py  extracted_code.txt  main.py  pyproject.toml  requirements.txt  test_future_agi_traces.py  test_tracing.py
chroma_db/: chroma.sqlite3
data/documents/: ai_basics.txt  python_guide.txt  rag_systems.txt
demo/: main.py  pyproject.toml  traces.json
src/: __init__.py  document_processor.py  evaluator.py  rag_engine.py  ui.py  vector_store.py
